syntax = "proto3";
option csharp_namespace = "StreamingSample.Common";

service MyService {
    rpc HelloWorld(HelloRequest) returns (HelloResponse);
    rpc HelloServerStream(HelloRequest) returns (stream HelloResponse);
    rpc CalcPiStream(HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
    string name = 1;
    int32 count = 2;
}

message HelloResponse {
    string message = 1;
}